force-app/main/default/objects/Validation__c/Validation__c.object-meta.xml
<CustomObject>
    <label>Validation</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Validatios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>