force-app/main/default/objects/Validation__c/fields/birthdate__c.field-meta.xml
<CustomField>
    <fullName>birthdate__c</fullName>
    <label>birthdate</label>
    <type>Date</type>
</CustomField>