force-app/main/default/objects/Validation__c/fields/No_Country__c.field-meta.xml
<CustomField>
    <fullName>No_Country__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Country</label>
    <type>Checkbox</type>
</CustomField>