force-app/main/default/objects/Validation__c/fields/Picking__c.field-meta.xml
<CustomField>
    <fullName>Picking__c</fullName>
    <label>Picking</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Selector__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Gujarat</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Jammu Kashmir</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>San Fransico</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Washington</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>