force-app/main/default/objects/Validation__c/fields/Selector__c.field-meta.xml
<CustomField>
    <fullName>Selector__c</fullName>
    <label>Selector</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>No_Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>X</fullName>
                <label>India</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <label>America</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>