force-app/main/default/objects/Validation__c/fields/Ten_Digit__c.field-meta.xml
<CustomField>
    <fullName>Ten_Digit__c</fullName>
    <label>Ten Digit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>