force-app/main/default/objects/Validation__c/recordTypes/Current_account.recordType-meta.xml
<RecordType>
    <fullName>Current_account</fullName>
    <active>true</active>
    <label>Second</label>
</RecordType>