force-app/main/default/objects/Validation__c/recordTypes/new.recordType-meta.xml
<RecordType>
    <fullName>new</fullName>
    <active>true</active>
    <label>First</label>
</RecordType>