force-app/main/default/objects/Validation__c/validationRules/Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount</fullName>
    <active>true</active>
    <errorConditionFormula>Amount__c  &gt; 10000</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Error</errorMessage>
</ValidationRule>