force-app/main/default/objects/Validation__c/validationRules/birthdate.validationRule-meta.xml
<ValidationRule>
    <fullName>birthdate</fullName>
    <active>true</active>
    <errorConditionFormula>birthdate__c  &gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>birthdate__c</errorDisplayField>
    <errorMessage>error</errorMessage>
</ValidationRule>