force-app/main/default/objects/Validation__c/validationRules/change.validationRule-meta.xml
<ValidationRule>
    <fullName>change</fullName>
    <active>true</active>
    <errorConditionFormula>$User.Id &lt;&gt; OwnerId</errorConditionFormula>
    <errorDisplayField>birthdate__c</errorDisplayField>
    <errorMessage>you cant change it</errorMessage>
</ValidationRule>