force-app/main/default/objects/Validation__c/validationRules/phone.validationRule-meta.xml
<ValidationRule>
    <fullName>phone</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(REGEX(  Phone__c  , &quot;\\+91[0-9]{10}&quot; )),
LEN(  Phone__c  ) &gt; 0
)</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>Error</errorMessage>
</ValidationRule>