force-app/main/default/objects/Validation__c/validationRules/Ten_digit.validationRule-meta.xml
<ValidationRule>
    <fullName>Ten_digit</fullName>
    <active>true</active>
    <errorConditionFormula>Ten_Digit__c &gt; 9999999999</errorConditionFormula>
    <errorDisplayField>Ten_Digit__c</errorDisplayField>
    <errorMessage>Number cant increase than 10 count</errorMessage>
</ValidationRule>